Remove missing SCSS templates, adjust font defaults

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -2,12 +2,12 @@
 
 // @font-face {
 //   font-family: "font-name";
-//   src: url("../assets/fonts/font-name.eot");
-//   src: url("../assets/fonts/font-name.eot?#iefix")
+//   src: url("../assets/fonts/font-name/font-name.eot");
+//   src: url("../assets/fonts/font-name/font-name.eot?#iefix")
 //       format("embedded-opentype"),
-//     url("../assets/fonts/font-name.woff") format("woff"),
-//     url("../assets/fonts/font-name.ttf") format("truetype"),
-//     url("../assets/fonts/font-name.svg#svgFontName") format("svg");
+//     url("../assets/fonts/font-name/font-name.woff") format("woff"),
+//     url("../assets/fonts/font-name/font-name.ttf") format("truetype"),
+//     url("../assets/fonts/font-name/font-name.svg#svgFontName") format("svg");
 //   font-display: block;
 //   font-weight: normal;
 //   font-style: normal;
