--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,7 +11,9 @@
 @import "common.scss";
 
 @import "./templates/404.scss";
+@import "./templates/about-page.scss";
 @import "./templates/index-page.scss";
+@import "./templates/contact-page.scss";
 
 @import "./components/Header.scss";
 @import "./components/Nav.scss";
