Minor text rendering fixes

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -56,7 +56,7 @@ input,
 select,
 textarea {
   -webkit-appearance: none;
-  -webkit-border-radius: 0px;
+  border-radius: 0px;
   outline: none;
 }
 
