--- a/src/scss/transitions.scss
+++ b/src/scss/transitions.scss
@@ -61,7 +61,7 @@ $fast-transition: $fast-transition-speed $ease-out-cubic;
 .animation-appear-left {
   animation: $slow-transition appear-left forwards;
 
-  transform: translate3d(0, 14px, 0);
+  transform: translate3d(14px, 0, 0);
   opacity: 0;
 }
 
@@ -77,9 +77,9 @@ $fast-transition: $fast-transition-speed $ease-out-cubic;
 }
 
 .animation-appear-right {
-  animation: $slow-transition appear-left forwards;
+  animation: $slow-transition appear-right forwards;
 
-  transform: translate3d(0, -14px, 0);
+  transform: translate3d(-14px, 0, 0);
   opacity: 0;
 }
 
