--- a/src/scss/components/Nav.scss
+++ b/src/scss/components/Nav.scss
@@ -78,13 +78,15 @@ $nav_menu_width: 300px;
     width: $nav_menu_width;
 
     &__link {
-      transition: $default-transition transform;
-
-      margin-bottom: 12px;
-
       @include hoverable {
-        transform: translate3d(8px, 0, 0);
-        text-transform: underline;
+        span {
+          transform: translate3d(8px, 0, 0);
+          text-decoration: underline;
+        }
+      }
+
+      span {
+        transition: $default-transition transform;
       }
     }
   }
