--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -133,6 +133,10 @@ $grid_padding: (
 
   //
 
+  &.cart-active {
+    transform: translate3d(-60px, 0, 0);
+  }
+
   &.menu-active {
     transform: translate3d(60px, 0, 0);
   }
