--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+// @import "../../node_modules/@glidejs/glide/dist/css/glide.core.min.css";
+
 @import "transitions.scss";
 @import "screen.scss";
 @import "grid.scss";
@@ -10,10 +12,10 @@
 @import "base.scss";
 @import "common.scss";
 
-@import "./templates/404.scss";
-@import "./templates/about-page.scss";
-@import "./templates/index-page.scss";
-@import "./templates/contact-page.scss";
+@import "components/Header.scss";
+@import "components/Nav.scss";
 
-@import "./components/Header.scss";
-@import "./components/Nav.scss";
+@import "templates/404.scss";
+@import "templates/about-page.scss";
+@import "templates/index-page.scss";
+@import "templates/contact-page.scss";
