--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -153,3 +153,15 @@
 .caption {
   @include caption;
 }
+
+//
+
+em,
+.em {
+  font-style: italic;
+}
+
+strong,
+.strong {
+  font-weight: bold;
+}
