--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -2,6 +2,10 @@
   border: 3px solid red;
 }
 
+.h-1\/2 {
+  height: 50%;
+}
+
 .transform-center {
   top: 50%;
   left: 50%;
@@ -22,6 +26,11 @@
 
 .clipped {
   clip: rect(auto, auto, auto, auto);
+}
+
+.square {
+  width: 100%;
+  padding-bottom: 100%;
 }
 
 .border-b,
