--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-// @import "../../node_modules/@glidejs/glide/dist/css/glide.core.min.css";
+@import "../../node_modules/@glidejs/glide/dist/css/glide.core.min.css";
 
 @import "transitions.scss";
 @import "screen.scss";
