--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,6 +13,7 @@
 @import "common.scss";
 
 @import "components/Header.scss";
+@import "components/Layout.scss";
 @import "components/Nav.scss";
 
 @import "templates/404.scss";
