--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -27,6 +27,7 @@ a:hover,
 a:visited {
   color: inherit;
   text-decoration: none;
+  appearance: none;
 }
 
 button {
@@ -35,6 +36,7 @@ button {
   border: none;
   background: transparent;
   outline: none;
+  appearance: none;
 }
 
 button:focus,
