--- a/src/scss/components/Layout.scss
+++ b/src/scss/components/Layout.scss
@@ -1,2 +1,12 @@
 .layout {
 }
+
+// .layout {
+//   &.cart-active {
+//     transform: translate3d(-60px, 0, 0);
+//   }
+
+//   &.menu-active {
+//     transform: translate3d(60px, 0, 0);
+//   }
+// }
