Minor improvements, yarn upgrade

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,5 +1,13 @@
 ////////////
 
+/*
+Sans:
+font-family: "FONT_NAME", Helvetica, Arial, sans-serif;
+
+Serif:
+font-family: "FONT_NAME", Times, "Times New Roman", serif;
+*/
+
 // @font-face {
 //   font-family: "font-name";
 //   src: url("../assets/fonts/font-name/font-name.eot");
