--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,4 +1,22 @@
 /*
+100: Thin, Hairline, Ultra-light, Extra-light
+200: Light
+300: Book
+400: Regular, Normal, Plain, Roman, Standard
+500: Medium
+600: Semi-bold, Demi-bold
+700: Bold
+800: Heavy, Black, Extra-bold
+900: Ultra-black, Extra-black, Ultra-bold, Heavy-black, Fat, Poster
+*/
+
+// serif:
+// font-family: "Font Name", Times, "Times New Roman", serif;
+
+// sans-serif:
+// font-family: "Font Name", Helvetica, Arial, sans-serif;
+
+/*
 @font-face {
   font-family: "Font Family";
   src: url("../assets/fonts/font-name.eot");
