--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -22,6 +22,10 @@
   transform: scaleX(-1);
 }
 
+.sixteen-by-nine {
+  height: 56.25vw;
+}
+
 .gpu {
   backface-visibility: hidden;
   perspective: 1000;
