--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -8,6 +8,7 @@ html {
 body {
   -moz-osx-font-smoothing: grayscale;
   -ms-overflow-style: none;
+  -webkit-font-smoothing: antialiased;
   position: relative;
   overflow-x: hidden;
 
