--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -1,12 +1,11 @@
 $grid_columns: 12;
-$grid_columns_xs: 12;
 $grid_gutter: 8px;
 $grid_padding: (
-  xl: 24px,
-  lg: 24px,
-  md: 24px,
-  sm: 16px,
-  xs: 16px,
+  xl: 1rem,
+  lg: 1rem,
+  md: 1rem,
+  sm: 1rem,
+  xs: 1rem,
 );
 
 .grid {
