--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,7 @@
 @import "components/Header.scss";
 @import "components/Layout.scss";
 @import "components/Nav.scss";
+@import "components/ScreenHeight.scss";
 
 @import "templates/404.scss";
 @import "templates/about-page.scss";
